feat: создана основная бизнес-логика приложения, реализован UI приложения
